[package]
name = "ttl"
version = "0.11.4"
edition = "2024"
rust-version = "1.85"
description = "Modern traceroute/mtr-style TUI with hop stats and optional ASN/geo enrichment"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lance0/ttl"
keywords = ["traceroute", "mtr", "network", "tui", "diagnostics"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"  # CancellationToken
futures = "0.3"     # join_all for parallel DNS

# TUI
ratatui = "0.30"
crossterm = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }

# Networking
socket2 = { version = "0.5", features = ["all"] }
pnet = "0.35"
libc = "0.2"

# DNS (note: trust-dns-resolver is now hickory-resolver)
hickory-resolver = "0.24"

# HTTP client for PeeringDB API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# ASN/Geo databases
maxminddb = "0.27"
ipnetwork = "0.20"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Better locks
parking_lot = "0.12"

# Cleanup guards
scopeguard = "1"

# Config directories
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
